--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  intl: any
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   fhoto_editor: ^0.0.2
+  window_size:
+      git:
+        url: https://github.com/google/flutter-desktop-embedding
+        path: plugins/window_size
 
 dev_dependencies:
   flutter_test:
@@ -58,6 +65,7 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  generate: true 
 
   # To add assets to your application, add an assets section, like this:
   assets:
