--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
       git:
         url: https://github.com/google/flutter-desktop-embedding
         path: plugins/window_size
+  socket_io_client: ^2.0.3+1
 
 dev_dependencies:
   flutter_test:
