--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
         path: plugins/window_size
   socket_io_client: ^2.0.3+1
   tcp_socket_connection: ^0.3.1
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
