--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   socket_io_client: ^2.0.3+1
   tcp_socket_connection: ^0.3.1
   provider: ^6.1.2
+  flutter_regex: ^0.0.3
 
 dev_dependencies:
   flutter_test:
