feat: get location, and code design

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   oauth2: ^2.0.1
   http: ^0.13.5
   flutter_dotenv: ^5.1.0
+  geolocator: ^11.0.0
 
 dev_dependencies:
   flutter_test:
