feat: integrate firebase storage

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   geolocator: ^11.0.0
   shared_preferences: ^2.2.2
   google_fonts: ^4.0.4
+  firebase_storage: ^11.7.1
 
 dev_dependencies:
   flutter_test:
