--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   shared_preferences: ^2.2.2
   google_fonts: ^4.0.4
   firebase_storage: ^11.7.1
+  filesystem_picker: ^4.1.0
 
 dev_dependencies:
   flutter_test:
