--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   google_fonts: ^4.0.4
   firebase_storage: ^11.7.1
   filesystem_picker: ^4.1.0
+  web_socket_channel: ^3.0.0
 
 dev_dependencies:
   flutter_test:
