feat: general design refactor

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,7 +87,7 @@ flutter:
     - assets/
     - assets/background/
     - assets/pannel-icons/
-    - assets/example-games/
+    - assets/prices/
     - .env
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
